[gd_scene load_steps=7 format=3 uid="uid://mcf4pp3hu1jm"]

[ext_resource type="Script" path="res://main.gd" id="1_nogf6"]
[ext_resource type="Texture2D" uid="uid://7v0jar4aja07" path="res://assets/bg.png" id="2_wnohp"]
[ext_resource type="PackedScene" uid="uid://blk5oa16hy2jp" path="res://card.tscn" id="3_bicdn"]
[ext_resource type="Texture2D" uid="uid://b7s8t572brp5m" path="res://assets/chip.png" id="4_byq7f"]
[ext_resource type="AudioStream" uid="uid://b3b184exkmktu" path="res://assets/chipsHandle1.ogg" id="5_b2mgc"]
[ext_resource type="AudioStream" uid="uid://du4mlo4m7wdya" path="res://assets/chipLay2.ogg" id="6_dhtx0"]

[node name="Main" type="Node" node_paths=PackedStringArray("chip_nodes")]
script = ExtResource("1_nogf6")
card_scene = ExtResource("3_bicdn")
chip_nodes = [NodePath("Chips"), NodePath("Chips2"), NodePath("Chips3"), NodePath("Chips4"), NodePath("Chips5"), NodePath("Chips6"), NodePath("Chips7"), NodePath("Chips8")]

[node name="Bg" type="Sprite2D" parent="."]
z_index = -3
texture = ExtResource("2_wnohp")
centered = false

[node name="Deck" parent="." instance=ExtResource("3_bicdn")]
position = Vector2(693, 256)
scale = Vector2(0.485, 0.485)
script = null

[node name="Count" type="Label" parent="Deck"]
offset_left = -80.4123
offset_top = -164.948
offset_right = 82.5877
offset_bottom = -120.948
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 31
text = "20"
horizontal_alignment = 1

[node name="PCards" type="Node2D" parent="."]
position = Vector2(355, 645)

[node name="DCards" type="Node2D" parent="."]
position = Vector2(1017, 443)

[node name="DScore" type="Label" parent="."]
offset_left = 814.0
offset_top = 414.0
offset_right = 986.0
offset_bottom = 519.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 76

[node name="Chips8" type="Node2D" parent="."]
z_index = -2
position = Vector2(241, 275)

[node name="Chips5" type="Node2D" parent="."]
z_index = -1
position = Vector2(195, 328)

[node name="Chips" type="Node2D" parent="."]
position = Vector2(124, 344)

[node name="Chip" type="Sprite2D" parent="Chips"]
visible = false
texture = ExtResource("4_byq7f")

[node name="Drop" type="AudioStreamPlayer2D" parent="Chips"]
stream = ExtResource("5_b2mgc")

[node name="Drop2" type="AudioStreamPlayer2D" parent="Chips"]
stream = ExtResource("6_dhtx0")

[node name="Chips2" type="Node2D" parent="."]
position = Vector2(72, 362)

[node name="Chips3" type="Node2D" parent="."]
position = Vector2(158, 381)

[node name="Chips4" type="Node2D" parent="."]
position = Vector2(51, 404)

[node name="Chips6" type="Node2D" parent="."]
position = Vector2(17, 440)

[node name="Chips7" type="Node2D" parent="."]
position = Vector2(-6, 502)

[node name="ChipGoPlace" type="Node2D" parent="."]
position = Vector2(588, 283)

[node name="Bet" type="Label" parent="."]
offset_left = 187.0
offset_top = 333.0
offset_right = 380.0
offset_bottom = 381.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Bet: Ð1,000,000"

[node name="Best" type="Label" parent="."]
offset_left = 186.0
offset_top = 315.0
offset_right = 379.0
offset_bottom = 363.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Best: Ð1,000,000"

[node name="PScore" type="Label" parent="."]
offset_left = 130.0
offset_top = 579.0
offset_right = 302.0
offset_bottom = 684.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 76

[node name="BetButton" type="Button" parent="."]
visible = false
offset_left = 28.0
offset_top = 395.0
offset_right = 226.0
offset_bottom = 447.0
theme_override_font_sizes/font_size = 31
text = "Bet: ALL IN!!!"

[node name="ActionButtons" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="Hit" type="Button" parent="ActionButtons"]
layout_mode = 0
offset_left = 521.0
offset_top = 381.0
offset_right = 608.0
offset_bottom = 453.0
theme_override_font_sizes/font_size = 46
text = "Hit!"

[node name="Stand" type="Button" parent="ActionButtons"]
layout_mode = 0
offset_left = 654.0
offset_top = 373.0
offset_right = 790.0
offset_bottom = 445.0
theme_override_font_sizes/font_size = 46
text = "Stand"

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="GameOver"]
layout_mode = 0
offset_left = 427.0
offset_top = 513.0
offset_right = 717.0
offset_bottom = 583.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
text = "Game Over!"

[node name="Button" type="Button" parent="GameOver"]
layout_mode = 0
offset_left = 537.0
offset_top = 603.0
offset_right = 676.0
offset_bottom = 681.0
theme_override_font_sizes/font_size = 51
text = "Retry"

[connection signal="pressed" from="BetButton" to="." method="_on_bet_button_pressed"]
[connection signal="pressed" from="ActionButtons/Hit" to="." method="_on_hit_pressed"]
[connection signal="pressed" from="ActionButtons/Stand" to="." method="_on_stand_pressed"]
[connection signal="pressed" from="GameOver/Button" to="." method="_on_button_pressed"]
